# arbiter

./: .gitignore  .gitmodules  CMakeLists.txt  imgui.ini
.github/workflows/: make_dist.yml
assets/shaders/: geometry.frag  geometry.frag.spv  geometry.vert.spv  render.frag  render.frag.spv  render.vert  render.vert.spv  shader.frag
shaders/: shader.frag  shader.frag.spv  shader.vert  shader.vert.spv
src/: main.c  renderer.c  renderer.h
src/core/: arbiter_event.h
src/core/arbiter/: event.h
src/layers/: exit_on_escape.h  layers.h
src/ui/: camera.c  camera.h  colors.c  colors.h  dockspace.c  dockspace.h  editor.c  editor.h  element.c  element.h  font.c  font.h  guizmo.c  guizmo.h  properties.c  properties.h  viewport.c  viewport.h  world_hierarchy.c  world_hierarchy.h
src/ui/menubar/: menubar.c  menubar.h
